--- a/quarto_library.bib
+++ b/quarto_library.bib
@@ -236,3 +236,17 @@ year = {2015},
 keywords = {Bayesian variable selection, regression analysis, model search algorithms},
 abstract = {Abstract The stochastic search variable selection (SSVS), introduced by George and McCulloch[1], is one of the prominent Bayesian variable selection approaches for regression problems. Some of the basic principles of modern Bayesian variable selection methods were first introduced via the SSVS algorithm such as the use of a vector of variable inclusion indicators. SSVS can effectively search large model spaces, identifying the maximum a posteriori and median probability models, and also readily produce Bayesian model averaging estimates. A number of generalizations and extensions of the method have appeared in the statistical literature implementing SSVS to a variety of applications such as generalized linear models, contingency tables, time series data, and factor analysis.}
 }
+
+@article{RN24,
+   author = {Deshpande, Ved and Dey, Dipak K. and Schifano, Elizabeth D.},
+   title = {Variable selection for correlated bivariate mixed outcomes using penalized generalized estimating equations},
+   journal = {Statistics and Its Interface},
+   volume = {12},
+   number = {2},
+   pages = {265-274},
+   ISSN = {19387989
+19387997},
+   DOI = {10.4310/SII.2019.v12.n2.a7},
+   year = {2019},
+   type = {Journal Article}
+}
